Fix `InlineRowSection` label wrapping

--- a/components/Box/InlineRowSection/styles.module.scss
+++ b/components/Box/InlineRowSection/styles.module.scss
@@ -1,12 +1,11 @@
 .inline-row-section {
 	display: grid;
-	grid-template-columns: 0fr auto;
+	grid-template-columns: 1fr auto;
 	gap: 1ch;
 	justify-content: center;
 
 	.label-container {
 		justify-self: right;
 		align-self: center;
-		white-space: nowrap;
 	}
 }
